# BeraPriceBot

./: error_log.txt  main.py  pyproject.toml  suscriptores.json
templates/: index.html
