[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["imlast999 <lxstbrexthe@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
